# manipulator_control

./: README.md
docs/: photo.py
manipulator_assets/arx5/: CMakeLists.txt  package.xml
manipulator_assets/arx5/arx5_config/: CMakeLists.txt  package.xml
manipulator_assets/arx5/arx5_hw/: CMakeLists.txt  package.xml
manipulator_assets/arx5/arx5_hw/include/arx5_hw/: ARX5HW.h  ARX5HWLoop.h
manipulator_assets/arx5/arx5_hw/include/arx5_hw/arx_lib/App/: arm_control.h
manipulator_assets/arx5/arx5_hw/include/arx5_hw/arx_lib/Hardware/: can.h
manipulator_assets/arx5/arx5_hw/src/: ARX5HW.cpp  ARX5HWLoop.cpp  arx5_hw.cpp
manipulator_assets/arx5/arx5_hw/src/arx_lib/: arm_control.cpp
manipulator_assets/arx5/config/: arx5.rviz  controllers.yaml
manipulator_assets/arx5/description/: display.launch  gazebo.launch
manipulator_assets/arx5/launch/: load_controllers.launch  load_gazebo.launch  load_move_group.launch
manipulator_assets/arx5_config/: package.xml
manipulator_assets/gripper/: CMakeLists.txt  package.xml
manipulator_assets/swingarm_v1/swing_hw/swing_hw/: CMakeLists.txt  package.xml
manipulator_assets/swingarm_v1/swing_hw/swingarm_hw/: CMakeLists.txt  package.xml
manipulator_assets/swingarm_v1/swing_hw/swingarm_hw/include/swingarm_hw/: hardware_interface.h
manipulator_assets/swingarm_v1/swing_hw/swingarm_hw/include/swingarm_hw/can_devices/: can_button_panel.h  can_device.h  can_dm_actuator.h  can_manager.h  can_st_imu.h
manipulator_assets/swingarm_v1/swing_hw/swingarm_hw/include/swingarm_hw/common/: imu_complementary_filter.h  imu_filter_base.h
manipulator_assets/swingarm_v1/swing_hw/swingarm_hw/include/swingarm_hw/hardware_interface/: HybridJointInterface.h  button_panel_interface.h
manipulator_assets/swingarm_v1/swing_hw/swingarm_hw/src/: control_loop.cpp  hardware_interface.cpp
manipulator_assets/swingarm_v1/swing_hw/swingarm_hw/src/can_devices/: can_button_panel.cpp  can_dm_actuator.cpp  can_manager.cpp  can_st_imu.cpp
manipulator_assets/swingarm_v1/swing_hw/swingarm_hw/src/common/: imu_complementary_filter.cpp  imu_filter_base.cpp  lp_filter.cpp
manipulator_assets/swingarm_v1/swing_hw/swingarm_hw/test/: test_hw.launch
manipulator_common/: CMakeLists.txt  package.xml  setup.py
manipulator_common/scripts/: cansend.py
manipulator_controllers/button_position_controller/: CMakeLists.txt  button_position_controller_plugins.xml  package.xml
manipulator_controllers/button_position_controller/include/button_position_controller/: button_position_controller.h
manipulator_controllers/button_position_controller/src/: button_position_controller.cpp
manipulator_controllers/gripper_controller/: CMakeLists.txt  gripper_controller_plugins.xml  package.xml
manipulator_controllers/gripper_controller/cfg/: GripperController.cfg
manipulator_controllers/gripper_controller/include/gripper_controller/: GripperController.h  GripperControllerImpl.h  HardwareInterfaceAdapter.h  gripper_controller.h  gripper_controller_impl.h  hardware_interface_adapter.h
manipulator_controllers/gripper_controller/src/: GripperController.cpp  gripper_controller.cpp
manipulator_controllers/gripper_controller/test/: simple_test.py
manipulator_controllers/manipulator_controllers/: CMakeLists.txt  package.xml
manipulator_controllers/rm_calibration_controllers/: CMakeLists.txt  package.xml
manipulator_controllers/robot_state_controller/: CMakeLists.txt  package.xml
manipulator_gazebo/: CMakeLists.txt  manipulator_hw_sim_plugins.xml  package.xml
manipulator_gazebo/include/manipulator_gazebo/: ManipulatorHWSim.h
manipulator_gazebo/src/: ManipulatorHWSim.cpp
manipulator_gazebo/worlds/: empty_world.world
manipulator_hw/: CMakeLists.txt  package.xml
manipulator_interactions/manipulator_interactions/: CMakeLists.txt  package.xml
manipulator_interactions/wit_ros_imu/: CMakeLists.txt
manipulator_msgs/: CMakeLists.txt  package.xml
manipulator_msgs/action/: GripperCommand.action
manipulator_msgs/msg/: GripperCmd.msg  GripperStallStatus.msg  GripperState.msg  GripperStatus.msg
manipulator_msgs/srv/: GripperCommand.srv
manipulator_python/: CMakeLists.txt  example.txt  package.xml  requirement.txt  setup.py
manipulator_python/scripts/: recorder_trajectory.py  send_trajectory.py  test_recorder_trajectory.py  test_send_trajectory.py
manipulator_python/src/manipulator_python/: trajectory_client.py  trajectory_reader.py  trajectory_recorder.py
manipulator_python/trajectory/: recorded_trajectory.csv  recorded_trajectory.yaml
manipulator_servo/: CMakeLists.txt  package.xml
manipulator_servo/include/manipulator_servo/: servo.h  servo_node.h
manipulator_servo/include/manipulator_servo/utils/: command.h  common.h  common.hpp  datatypes.h  datatypes.hpp
manipulator_servo/src/: servo.cpp  servo_node.cpp
manipulator_servo/src/utils/: command.cpp  common.cpp
manipulator_tools/ps5_joy/: CMakeLists.txt
robot_common/: CMakeLists.txt
robot_control/: package.xml
robot_control/robot_common/: package.xml
robot_control/robot_common/include/robot_common/interface/can_interface/: types.h
robot_control/robot_common/include/robot_common/utilities/: can_motor.h
robot_control/robot_common/src/interface/can_interface/: can_bus.cpp
robot_control/robot_common/src/utilities/: lp_filter.cpp
robot_control/robot_control/: CMakeLists.txt  package.xml
robot_control/robot_gazebo/config/: default.yaml
robot_control/robot_gazebo/include/robot_gazebo/: RobotHWSim.h
robot_control/robot_gazebo/src/: RobotHWSim.cpp
robot_control/robot_hw/: CMakeLists.txt
robot_control/robot_hw/include/robot_hw/: control_loop.h  hardware_interface.h
robot_control/robot_hw/src/: control_loop.cpp  hardware_interface.cpp  robot_hw.cpp
robot_control/robot_msgs/: package.xml
robot_control/temple_controller/: CMakeLists.txt  package.xml  temple_controller_plugins.xml
robot_control/temple_controller/src/: TempleController.cpp
robot_hw/: package.xml
robot_msgs/: CMakeLists.txt
trac_ik_solver/: CMakeLists.txt
trac_ik_solver/src/: tracSolver.cpp
(+216 files in other folders)
