<?xml version="1.0"?>
<package format="2">
  <name>manipulator_servo</name>
  <version>0.0.0</version>
  <description>The manipulator_servo package</description>

  <maintainer email="liusiyang.cn@gmail.com">Siyang Liu</maintainer>
  <license>BSD</license>
  <author email="liusiyang.cn@gmail.com">Siyang Liu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <depend>controller_interface</depend>
  <depend>effort_controllers</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>control_toolbox</depend>


</package>
