<?xml version="1.0"?>
<package format="2">
  <name>button_position_controller</name>
  <version>0.1.0</version>
  <description>
    A position controller that uses a button panel to select target positions
  </description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>swingarm_hw</depend>

  <export>
    <controller_interface plugin="${prefix}/button_position_controller_plugins.xml"/>
  </export>
</package>
