<?xml version="1.0"?>
<package format="2">
  <name>gripper_controller</name>
  <version>0.0.0</version>
  <description>The gripper_controller package</description>

  <maintainer email="liusiyang.cn@gmail.com">Siyang Liu</maintainer>
  <license>BSD</license>
  <author email="liusiyang.cn@gmail.com">Siyang Liu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <depend>controller_interface</depend>
  <depend>effort_controllers</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>control_toolbox</depend>
  <depend>manipulator_msgs</depend>
  <depend>urdf</depend>
  <depend>robot_common</depend>

  <export>
    <controller_interface plugin="${prefix}/gripper_controller_plugins.xml"/>
  </export>

</package>
