<?xml version="1.0"?>
<package format="2">
  <name>manipulator_controllers</name>
  <version>0.1.11</version>
  <description>Meta package that contains package for manipulator.</description>
  <maintainer email="liusiyang.cn@gmail.com">4yang</maintainer>

  <license>BSD</license>
  <author email="liusiyang.cn@gmail.com">4yang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gripper_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>rm_calibration_controllers</exec_depend>
  <exec_depend>robot_state_controller</exec_depend>
  <exec_depend>gripper_action_controller</exec_depend>
  <!--  <exec_depend>arm_hybrid_controller</exec_depend>-->

  <export>
    <metapackage/>
  </export>
</package>