<?xml version="1.0"?>
<package format="2">
  <name>temple_controller</name>
  <version>0.0.0</version>
  <description>The temple_controller package</description>

  <maintainer email="liusiyang.cn@gmail.com">Siyang Liu</maintainer>
  <license>BSD</license>
  <author email="liusiyang.cn@gmail.com">Siyang Liu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <depend>controller_interface</depend>
  <depend>effort_controllers</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>control_toolbox</depend>

  <export>
    <controller_interface plugin="${prefix}/temple_controller_plugins.xml"/>
  </export>

</package>
