<?xml version="1.0"?>
<package format="2">
  <name>swing_hw</name>
  <version>0.1.11</version>
  <description>Meta package that contains package for swing serial hw.</description>
  <maintainer email="liusiyang.cn@gmail.com">4yang</maintainer>

  <license>BSD</license>
  <author email="liusiyang.cn@gmail.com">4yang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>swing_hw_msgs</exec_depend>
  <exec_depend>siwngarm_hw</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>